[package]
name = "clue-solver"
version = "0.1.0"
edition = "2021"
authors = ["Dylan Starink <dylan@starink.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "cluesolverlib"
path  = "src/lib/lib.rs"

[[bin]]
name = "cluesolverbin"
path = "src/bin/bin.rs"

[dependencies]
clap = "4.0.29"
enum-iterator = "1.2.0"
serde = {version = "1.0.150", features = ["derive"] }
serde_json = "1.0"
error-chain = "0.12.4"
num = "0.4.0"